opsiweb/uib-components/static/themes/opsi.css
*,::after,::before{
  box-sizing:border-box
}
html{
  font-family:var(--font-family-general);
  line-height:1.15;
  -webkit-text-size-adjust:100%;
  -webkit-tap-highlight-color:var(--basic-tab-highlight)
}
article,aside,figcaption,figure,footer,header,hgroup,main,nav,section{
  display:block
}
body{
  margin:0;
  font-family:var(--font-family-general);
  font-size:1rem;
  font-weight:400;
  line-height:1.5;
  color:var(--fg-basic);
  text-align:left;
  background-color:var(--bg-basic)
}
[tabindex="-1"]:focus:not(:focus-visible){
  outline:0 !important
}
hr{
  box-sizing:content-box;
  height:0;
  overflow:visible;
  margin-top:1rem;
  margin-bottom:1rem;
  border:0;
  border-top:1px solid var(--border)
}
h1,h2,h3,h4,h5,h6{
  margin-top:0;
  margin-bottom:0.5rem
}
p{
  margin-top:0;
  margin-bottom:1rem
}
abbr[data-original-title],abbr[title]{
  text-decoration:underline;
  text-decoration:underline dotted;
  cursor:help;
  border-bottom:0;
  text-decoration-skip-ink:none
}
address{
  margin-bottom:1rem;
  font-style:normal;
  line-height:inherit
}
dl,ol,ul{
  margin-top:0;
  margin-bottom:1rem
}
ol ol,ol ul,ul ol,ul ul{
  margin-bottom:0
}
dt{
  font-weight:700
}
dd{
  margin-bottom:0.5rem;
  margin-left:0
}
blockquote{
  margin:0 0 1rem
}
b,strong{
  font-weight:bolder
}
small{
  font-size:80%
}
sub,sup{
  position:relative;
  font-size:75%;
  line-height:0;
  vertical-align:baseline
}
sub{
  bottom:-0.25em
}
sup{
  top:-0.5em
}
a{
  color:var(--fg-a);
  text-decoration:none;
  background-color:var(--bg-a)
}
a:hover{
  color:var(--fg-a-hover);
  text-decoration:underline
}
a:not([href]){
  color:inherit;
  text-decoration:none
}
a:not([href]):hover{
  color:inherit;
  text-decoration:none
}
code,kbd,pre,samp{
  font-family:var(--font-family-code);
  font-size:1em
}
pre{
  margin-top:0;
  margin-bottom:1rem;
  overflow:auto;
  -ms-overflow-style:scrollbar;
  display:block;
  font-size:87.5%;
  color:var(--fg-pre)
}
figure{
  margin:0 0 1rem
}
img{
  vertical-align:middle;
  border-style:none
}
svg{
  overflow:hidden;
  vertical-align:middle
}
table{
  border-collapse:collapse
}
caption{
  padding-top:0.75rem;
  padding-bottom:0.75rem;
  color:var(--fg-caption);
  text-align:left;
  caption-side:bottom
}
th{
  text-align:inherit
}
label{
  display:inline-block;
  margin-bottom:0.5rem
}
button{
  border-radius:0
}
button:focus{
  outline:1px dotted;
  outline:5px auto -webkit-focus-ring-color
}
button,input,optgroup,select,textarea{
  margin:0;
  font-family:inherit;
  font-size:inherit;
  line-height:inherit
}
button,input{
  overflow:visible
}
button,select{
  text-transform:none
}
[role="button"]{
  cursor:pointer
}
select{
  word-wrap:normal
}
[type="button"],[type="reset"],[type="submit"],button{
  -webkit-appearance:button;
  appearance:button
}
[type="button"]:not(:disabled),[type="reset"]:not(:disabled),[type="submit"]:not(:disabled),button:not(:disabled){
  cursor:pointer
}
[type="help"]:not(:disabled),button:not(:disabled){
  cursor:help
}
[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner,button::-moz-focus-inner{
  padding:0;
  border-style:none
}
input[type="checkbox"],input[type="radio"]{
  box-sizing:border-box;
  padding:0
}
textarea{
  overflow:auto;
  resize:vertical
}
fieldset{
  min-width:0;
  padding:0;
  margin:0;
  border:0
}
legend{
  display:block;
  width:100%;
  max-width:100%;
  padding:0;
  margin-bottom:0.5rem;
  font-size:1.5rem;
  line-height:inherit;
  color:inherit;
  white-space:normal
}
progress{
  vertical-align:baseline
}
[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{
  height:auto
}
[type="search"]{
  outline-offset:-2px;
  -webkit-appearance:none;
  appearance:none
}
[type="search"]::-webkit-search-decoration{
  -webkit-appearance:none;
  appearance:none
}
::-webkit-file-upload-button{
  font:inherit;
  -webkit-appearance:button
}
output{
  display:inline-block
}
summary{
  display:list-item;
  cursor:pointer
}
template{
  display:none
}
[hidden]{
  display:none !important
}
.h1,.h2,.h3,.h4,.h5,.h6,h1,h2,h3,h4,h5,h6{
  margin-bottom:0.5rem;
  font-weight:500;
  line-height:1.2
}
.h1,h1{
  font-size:2.5rem
}
.h2,h2{
  font-size:2rem
}
.h3,h3{
  font-size:1.75rem
}
.h4,h4{
  font-size:1.5rem
}
.h5,h5{
  font-size:1.25rem
}
.h6,h6{
  font-size:1rem
}
.lead{
  font-size:1.25rem;
  font-weight:300
}
.display-1{
  font-size:6rem;
  font-weight:300;
  line-height:1.2
}
.display-2{
  font-size:5.5rem;
  font-weight:300;
  line-height:1.2
}
.display-3{
  font-size:4.5rem;
  font-weight:300;
  line-height:1.2
}
.display-4{
  font-size:3.5rem;
  font-weight:300;
  line-height:1.2
}
.small,small{
  font-size:80%;
  font-weight:400
}
.mark,mark{
  padding:0.2em;
  background-color:var(--bg-mark)
}
.list-unstyled{
  padding-left:0;
  list-style:none
}
.list-inline{
  padding-left:0;
  list-style:none
}
.list-inline-item{
  display:inline-block
}
.list-inline-item:not(:last-child){
  margin-right:0.5rem
}
.initialism{
  font-size:90%;
  text-transform:uppercase
}
.blockquote{
  margin-bottom:1rem;
  font-size:1.25rem
}
.blockquote-footer{
  display:block;
  font-size:80%;
  color:var(--fg-blockquote_footer)
}
.blockquote-footer::before{
  content:"\2014\00A0"
}
.img-fluid{
  max-width:100%;
  height:auto
}
.img-thumbnail{
  padding:0.25rem;
  background-color:var(--bg-img_thumbnail);
  border:1px solid var(--b-img_thumbnail);
  border-radius:0.25rem;
  max-width:100%;
  height:auto
}
.figure{
  display:inline-block
}
.figure-img{
  margin-bottom:0.5rem;
  line-height:1
}
.figure-caption{
  font-size:90%;
  color:var(--fg-figure_caption)
}
code{
  font-size:87.5%;
  color:var(--fg-code);
  word-wrap:break-word
}
a > code{
  color:inherit
}
kbd{
  padding:0.2rem 0.4rem;
  font-size:87.5%;
  color:var(--fg-kbd);
  background-color:var(--bg-kbd);
  border-radius:0.2rem
}
kbd kbd{
  padding:0;
  font-size:100%;
  font-weight:700
}
/* ... */

